test/netlist/error/freevar-define.bop
#define X 0
#define Y Z
#define Z ( COND == 0 ? 0 : 1 )
